refactor: refatoração massiva para conformidade com a spec e boas práticas
- Corrige tipo dos IDs nas entidades JPA (String → UUID) eliminando
  incompatibilidade com JpaRepository<Entity, UUID> e colunas UUID no banco
- Interfaces de repositório do domínio passam a usar String IDs; conversão
  String↔UUID fica encapsulada na camada de infraestrutura
- Adiciona TagsConverter (AttributeConverter) para persistir List<String>
  como TEXT sem necessidade de nova migration
- Cria EntityNotFoundException e handler dedicado no GlobalExceptionHandler,
  corrigindo semântica HTTP: not-found agora retorna 404 em vez de 400/500
- Verifica existência em todos os updates e deletes antes de executar
- Corrige TaskController/TaskUseCase/DomainFactory para aceitar todos os
  campos da spec no POST e PUT de tarefa (dueDate, completed, tags, createdAt)
- Ordena colunas e tarefas por position diretamente no banco (derived queries)
- Renomeia SimpleColumnReorderStrategy → SimpleReorderStrategy com retorno
  imutável; atualiza interface ReorderStrategy
- Adiciona @EnableCaching em TesteApplication (cache era no-op antes)
- Recria testes deletados: ColumnTest, TaskTest, SimpleReorderStrategyTest,
  BoardRepositoryTest (@DataJpaTest + H2) e application-test.yaml
- Atualiza todos os testes de UseCase para cobrir cenários de not-found

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>