@@ -3,16 +3,16 @@ package com.otimizza.teste.interfaces;
 import com.otimizza.teste.application.dtos.TaskDTO;
 import com.otimizza.teste.application.usecases.TaskUseCase;
 import com.otimizza.teste.domain.entities.Task;
-import lombok.RequiredArgsConstructor;
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.time.OffsetDateTime;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/task")
@@ -23,39 +23,44 @@ public class TaskController {
     @GetMapping("/from/{columnId}")
     public ResponseEntity<List<TaskDTO>> listByColumn(@PathVariable String columnId) {
         List<TaskDTO> tasks = taskUseCase.listByColumn(columnId).stream()
-                .map(t -> new TaskDTO(t.id().toString(), t.name(), t.position(), t.createdAt(), t.dueDate(), t.completed(), t.tags(), t.columnId().toString()))
-                .collect(Collectors.toList());
+                .map(this::toDTO)
+                .toList();
         return ResponseEntity.ok(tasks);
     }
 
     @PostMapping
-    public ResponseEntity<TaskDTO> create(@Valid @RequestBody CreateTaskRequest request) {
-        Task task = taskUseCase.create(request.name(), request.position(), request.columnId());
-        return ResponseEntity.ok(new TaskDTO(task.id().toString(), task.name(), task.position(), task.createdAt(), task.dueDate(), task.completed(), task.tags(), task.columnId().toString()));
+    public ResponseEntity<TaskDTO> create(@Valid @RequestBody TaskRequest request) {
+        Task task = taskUseCase.create(
+                request.name(), request.position(), request.columnId(),
+                request.createdAt(), request.dueDate(), request.completed(), request.tags());
+        return ResponseEntity.ok(toDTO(task));
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<TaskDTO> update(@PathVariable String id, @Valid @RequestBody UpdateTaskRequest request) {
-        Task task = taskUseCase.update(id, request.name(), request.position(), request.columnId(), request.completed(), request.tags());
-        return ResponseEntity.ok(new TaskDTO(task.id().toString(), task.name(), task.position(), task.createdAt(), task.dueDate(), task.completed(), task.tags(), task.columnId().toString()));
+    public ResponseEntity<TaskDTO> update(@PathVariable String id, @Valid @RequestBody TaskRequest request) {
+        Task task = taskUseCase.update(
+                id, request.name(), request.position(), request.columnId(),
+                request.dueDate(), request.completed(), request.tags());
+        return ResponseEntity.ok(toDTO(task));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Map<String, String>> delete(@PathVariable String id) {
-        Task task = taskUseCase.findById(id).orElseThrow();
-        taskUseCase.delete(id, task.columnId());
+        taskUseCase.delete(id);
         return ResponseEntity.ok(Map.of("status", "ok"));
     }
 
-    public record CreateTaskRequest(
-            @NotBlank(message = "Name cannot be blank") String name,
-            int position,
-            @NotNull(message = "Column ID cannot be null") String columnId) {}
+    private TaskDTO toDTO(Task t) {
+        return new TaskDTO(t.id(), t.name(), t.position(), t.createdAt(),
+                t.dueDate(), t.completed(), t.tags(), t.columnId());
+    }
 
-    public record UpdateTaskRequest(
+    public record TaskRequest(
             @NotBlank(message = "Name cannot be blank") String name,
             int position,
-            @NotNull(message = "Column ID cannot be null") String columnId,
+            OffsetDateTime createdAt,
+            OffsetDateTime dueDate,
             boolean completed,
-            List<String> tags) {}
+            List<String> tags,
+            @NotNull(message = "Column ID cannot be null") String columnId) {}
 }
